--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <main>
   <!-- <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
   <app-post-list [posts]="storedPost"></app-post-list> -->
-  <app-product (productCreated)="onChangeAdded($event)"></app-product>
+  <app-product></app-product>
 </main>
